--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ dm-control = {version = ">=1.0.10", optional = true}
 h5py = {version = ">=3.7.0", optional = true}
 optax = {version = "0.1.4", optional = true}
 chex = {version = "0.1.5", optional = true}
-numpy = ">=1.21.6"
+numpy = "1.23.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
