--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,87 +1,153 @@
-absl-py==1.4.0
-ale-py==0.8.1
+absl-py==2.1.0
+aiosignal==1.3.1
 appdirs==1.4.4
+arch==5.3.0
+astroid==3.2.4
+attrs==23.2.0
 AutoROM==0.4.2
 AutoROM.accept-rom-license==0.6.1
+black==24.4.2
+box2d-py==2.3.5
 cachetools==5.3.0
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-cloudpickle==2.2.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+cma==3.4.0
 colorama==0.4.4
 commonmark==0.9.1
-cycler==0.11.0
+contourpy==1.1.1
+cycler==0.12.1
 decorator==4.4.2
+dill==0.3.8
 docker-pycreds==0.4.0
 docstring-parser==0.15
-etils==1.12.2
+ema-pytorch==0.7.7
+etils==1.3.0
 Farama-Notifications==0.0.4
-filelock==3.12.0
-fonttools==4.38.0
-fsspec==2025.3.2
+filelock==3.13.4
+fonttools==4.51.0
+frozenlist==1.4.1
+fsspec==2024.3.1
 gitdb==4.0.10
 GitPython==3.1.31
-glfw==2.8.0
+glfw==2.7.0
 google-auth==2.18.0
 google-auth-oauthlib==0.4.6
 grpcio==1.54.0
 gym==0.23.1
 gym-notices==0.0.8
-gymnasium==0.28.1
+gymnasium==1.0.0
 huggingface-hub==0.11.1
-idna==3.4
-imageio==2.28.1
+h5py==3.14.0
+idna==3.7
+imageio==2.34.1
 imageio-ffmpeg==0.3.0
-importlib-resources==5.12.0
+importlib-metadata==7.1.0
+importlib-resources==6.4.0
+isort==5.13.2
 jax-jumpy==1.0.0
-kiwisolver==1.4.4
+Jinja2==3.1.3
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+llvmlite==0.41.1
+lxml==5.2.2
+Mako==1.3.5
 Markdown==3.3.7
-MarkupSafe==2.1.2
-matplotlib==3.5.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+mccabe==0.7.0
+mdurl==0.1.2
 MinAtar==1.0.15
 moviepy==1.0.3
-mujoco==3.3.0
-numpy==1.23.0
+mpld3==0.5.10
+mpmath==1.3.0
+msgpack==1.0.8
+mujoco==3.1.4
+mypy-extensions==1.0.0
+networkx==3.1
+numba==0.58.1
+numpy==1.24.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
-opencv-python==4.7.0.72
-packaging==23.1
-pandas==1.3.5
+opencv-python==4.11.0.86
+packaging==24.0
+pandas==2.0.3
+pathspec==0.12.1
 pathtools==0.1.2
-Pillow==9.5.0
+patsy==0.5.6
+pillow==10.3.0
+pkgutil-resolve-name==1.3.10
+platformdirs==4.2.2
 proglog==0.1.10
-protobuf==3.20.3
+property-cached==1.6.4
+protobuf==3.20.0
 psutil==5.9.5
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pygame==2.1.0
 Pygments==2.15.1
-PyOpenGL==3.1.9
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2023.3
+pylint==3.2.6
+pynndescent==0.5.13
+PyOpenGL==3.1.7
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 PyYAML==6.0.1
-requests==2.30.0
+ray==2.10.0
+referencing==0.35.1
+requests==2.32.3
 requests-oauthlib==1.3.1
 rich==11.2.0
+rliable==1.0.8
+rpds-py==0.19.1
 rsa==4.7.2
-scipy==1.15.2
+scikit-learn==1.3.2
+scipy==1.10.1
 seaborn==0.13.2
 sentry-sdk==1.22.2
 setproctitle==1.3.2
-Shimmy==1.1.0
+Shimmy==0.2.1
 shtab==1.6.4
 six==1.16.0
 smmap==5.0.0
-stable-baselines3==2.0.0
+stable-baselines3==2.4.0
+statsmodels==0.14.1
+swig==4.2.1
+sympy==1.12
 tenacity==8.2.3
 tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-torch==1.12.1
-tqdm==4.65.0
-typing_extensions==4.5.0
+termcolor==2.4.0
+terminaltables==3.1.10
+threadpoolctl==3.5.0
+tomli==2.0.1
+tomlkit==0.13.0
+torch==2.4.1
+torchpairwise==0.1.1
+torchvision==0.19.1
+tqdm==4.66.4
+triton==3.0.0
+typing-extensions==4.11.0
 tyro==0.5.10
-urllib3==1.26.15
+tzdata==2024.1
+umap-learn==0.5.7
+urllib3
 wandb==0.13.11
 Werkzeug==2.2.3
-zipp==3.21.0
+zipp==3.18.1
